[1410] Clarify summary. Add QA steps

--- a/index.html
+++ b/index.html
@@ -279,15 +279,18 @@
           </li>
 
           <li class="guideline">
-            <a href="./guidelines/1.4.10.html">Reflow</a>
+            <a href="./guidelines/1.4.10.html"
+              >Reflow (also known as 'Responsive Web Design')</a
+            >
             <ul class="badges">
               <li class="badge badge--design">Design</li>
               <li class="badge badge--code">Code</li>
             </ul>
             <div>
-              On a 1280px screen at 400% zoom, make sure people can access all
-              of your site's content and functionalities without needing to
-              scroll in two directions.
+              People can access the page’s content and functionality without
+              needing to scroll horizontally ...<br />
+              - at 100% zoom in a window that's 320px wide,<br />
+              - and zoomed up to 400% in a window that's 1280px wide.
             </div>
           </li>
 
