--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
             </ul>
             <div>
               People can access the page’s content and functionality without
-              needing to scroll horizontally ...<br />
+              needing to scroll horizontally:<br />
               - at 100% zoom in a window that's 320px wide,<br />
-              - and zoomed up to 400% in a window that's 1280px wide.
+              - zoomed up to 400% in a window that's 1280px wide.
             </div>
           </li>
 
