--- a/guidelines/1.1.1.html
+++ b/guidelines/1.1.1.html
@@ -25,6 +25,10 @@
           >email</a
         >.
       </p>
+
+      <p>
+          <a href="../index.html">Back to the overview page</a>
+      </p>
     </header>
   </body>
 
@@ -148,8 +152,8 @@
         <form>
             <div style="display: flex; align-items: center;">
                 <input type="search" aria-labelledby="search_button" style="height: 2rem;" >
-                <button id="search_button" type="submit">
-                <img src="../assets/search_icon_3r5y.png" style="width: 2rem; height: 2rem;" alt="Search">
+                <button id="search_button" type="submit" style="height: 2rem;" >
+                    <img src="../assets/search_icon_3r5y.png" style="width: 2rem; height: 2rem;" alt="Search">
                 </button>
             </div>
         </form>
