[111] Remove height in button in 2nd section
It wasn't fixing the bug in iOS

--- a/guidelines/1.1.1.html
+++ b/guidelines/1.1.1.html
@@ -152,7 +152,7 @@
         <form>
             <div style="display: flex; align-items: center;">
                 <input type="search" aria-labelledby="search_button" style="height: 2rem;" >
-                <button id="search_button" type="submit" style="height: 2rem;" >
+                <button id="search_button" type="submit">
                     <img src="../assets/search_icon_3r5y.png" style="width: 2rem; height: 2rem;" alt="Search">
                 </button>
             </div>
