[247] Improve summary and guidance with two videos

--- a/index.html
+++ b/index.html
@@ -513,9 +513,9 @@
               <li class="badge badge--code">Code</li>
             </ul>
             <div>
-              When they use the Tab key to navigate through the page, make sure
-              keyboard users can see which interactive element has the keyboard
-              focus.
+              When people press the Tab key to navigate through the interactive
+              elements on the page, make sure they can see which element has the
+              keyboard focus.
             </div>
           </li>
         </ul>
